# gg

./: Cargo.toml  README.md
app/: Cargo.toml  input_block_custom.html  input_block_default.html
app/examples/: input_block_demo.rs
app/src/: input_block.rs  input_block_config.scss  input_block_example.rs  input_block_integration.rs  input_block_tests.rs  lib.rs
app/src/ai/mcp/view/: collection.rs  editor.rs  mod.rs  roles.rs
app/src/ai/mcp/view/tests/: roles_test.rs
app/src/api/: mod.rs
app/src/server/telemetry/: collector.rs
assets/: dummy_asset.txt
src/: block.rs  blocks.rs  collaboration.rs  command_palette.rs  config.rs  editor.rs  fuzzy.rs  input.rs  main.rs  preferences.rs  profile_manager_ui.rs  profile_switcher.rs  profiles.rs  prompt.rs  renderer.rs  shell.rs  terminal.rs  theme_customizer.rs  theme_selector.rs  themes.rs  warp_drive_ui.rs  workflow_browser.rs  workflow_executor.rs  workflows.rs
src/agent_mode_eval/: executor.rs  mod.rs
src/asset_macro/: mod.rs
src/command/: mod.rs
src/config/: mod.rs  preferences.rs  theme.rs  yaml_theme.rs  yaml_theme_manager.rs
src/drive/: mod.rs
src/fuzzy_match/: matcher.rs  mod.rs
src/graphql/: mod.rs
src/integration/: mod.rs
src/languages/: mod.rs
src/lpc/: mod.rs
src/markdown_parser/: mod.rs  parser.rs
src/mcq/: mod.rs
src/natural_language_detection/: mod.rs  model.rs
src/resources/: mod.rs
src/serve_wasm/: mod.rs
src/settings/: keybinding_editor.rs  mod.rs  theme_editor.rs  yaml_theme_ui.rs
src/string_offset/: mod.rs
src/sum_tree/: mod.rs
src/syntax_tree/: mod.rs  parser.rs
src/virtual_fs/: mod.rs
src/watcher/: mod.rs  service.rs
src/websocket/: client.rs  mod.rs
src/workflows/: executor.rs  manager.rs  mod.rs  ui.rs
themes/: example.yaml
ui/: Cargo.toml
ui/src/: components.rs  lib.rs  themes.rs  widgets.rs
ui/src/core/: Console.txt  app.rs
ui/src/platform/: app.rs  mod.rs
