[package]
name = "warp-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core GUI framework
iced = { version = "0.12", features = ["tokio", "advanced"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Configuration management
config = "0.13"
dirs = "5.0"

# Error handling
thiserror = "1.0"

# Fuzzy matching and search
fuzzy-matcher = "0.3"
skim = "0.10"

# Regular expressions
regex = "1.0"

# URL parsing
url = "2.0"

# HTTP client for importing workflows
reqwest = { version = "0.11", features = ["json"] }

# File system operations
notify = "6.0"
walkdir = "2.0"

# Markdown parsing
pulldown-cmark = "0.9"

# Syntax highlighting
syntect = "5.0"

# Tree-sitter for syntax trees
tree-sitter = "0.20"
tree-sitter-bash = "0.20"

# Terminal/PTY support
portable-pty = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GPU acceleration (optional)
wgpu = "0.18"
cosmic-text = "0.10"

# WebSocket support for collaboration
tokio-tungstenite = "0.20"

# WASM runtime for plugins
wasmtime = "14.0"

# Image processing
image = "0.24"

# Clipboard support
arboard = "3.0"

# Cross-platform file watching
inotify = "0.10"
notify-debouncer-mini = "0.4"

# Performance profiling
pprof = { version = "0.12", features = ["flamegraph"] }

# Color manipulation
palette = "0.7"

# File dialog
rfd = "0.12"

# Temporary directories for testing
[dev-dependencies]
tempfile = "3.0"